# slack-sql-qa-bot-langgraph

./: .env.example  .gitignore  DESIGN.md  DESIGN_TEMPLATE.md  README.md  pyproject.toml
app/: __init__.py  agent.py  config.py  db_tools.py  main.py  slack_bot.py
scripts/: download_db.sh  eval_queries.py
state/: eval_results.json
